<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Tell-it Preferences" >

    <PreferenceCategory android:title="LiveView Setup" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pluginEnabled"
            android:order="0"
            android:title="@string/conf_enabled_info" />
        <!-- Add your additional preferences here. -->
    </PreferenceCategory>
    <PreferenceCategory android:title="Contribute!" >
        <ListPreference
            defaultValue="-1"
            android:dependency="pluginEnabled"
            android:entries="@array/in_app_messages"
            android:entryValues="@array/in_app_sku"
            android:key="in_app"
            android:summary="@string/conf_in_app_summary"
            android:title="@string/conf_in_app_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="messagesPreferences"
        android:title="Messages" >
        <EditTextPreference
            android:defaultValue="@string/default_message_1"
            android:dependency="pluginEnabled"
            android:key="message_0"
            android:order="1"
            android:title="@string/conf_message_1_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_2"
            android:dependency="pluginEnabled"
            android:key="message_1"
            android:order="2"
            android:title="@string/conf_message_2_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_3"
            android:dependency="pluginEnabled"
            android:key="message_2"
            android:order="3"
            android:title="@string/conf_message_3_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_4"
            android:dependency="pluginEnabled"
            android:key="message_3"
            android:order="4"
            android:title="@string/conf_message_4_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_5"
            android:dependency="pluginEnabled"
            android:key="message_4"
            android:order="5"
            android:title="@string/conf_message_5_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_6"
            android:dependency="pluginEnabled"
            android:key="message_5"
            android:order="6"
            android:title="@string/conf_message_6_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_7"
            android:dependency="pluginEnabled"
            android:key="message_6"
            android:order="7"
            android:title="@string/conf_message_7_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_8"
            android:dependency="pluginEnabled"
            android:key="message_7"
            android:order="8"
            android:title="@string/conf_message_8_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_9"
            android:dependency="pluginEnabled"
            android:key="message_8"
            android:order="9"
            android:title="@string/conf_message_9_info" />
        <EditTextPreference
            android:defaultValue="@string/default_message_10"
            android:dependency="pluginEnabled"
            android:key="message_9"
            android:order="10"
            android:title="@string/conf_message_10_info" />
    </PreferenceCategory>

</PreferenceScreen>